Reworked initial version of graph refinement